--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
     background-position: 0% 0%;
     min-height: 450px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0;
@@ -52,10 +52,10 @@ body{
 }
 
 .container{
-    display: inline-block;
+    display: flex;
     /*display: flex;*/
     /*flex-direction: column;*/
-    /*text-align: center;*/
+    align-items: center;
 }
 
 .subtitle{
