--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -23,6 +23,7 @@ code {
   monospace;
 }
 
+
 html,
 body {
   height: 100%;
@@ -115,13 +116,14 @@ form[action$="destroy"] button {
 
 #sidebar {
 
-  width: 22rem;
+  width: 100%;
   height: 100%;
   background-color: #f7f7f7;
-  border-right: solid 1px #e3e3e3;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+
 }
 
 
@@ -185,6 +187,8 @@ i {
   display: flex;
   margin: 0.25rem 0;
   width: 100%;
+  font-weight: bold;
+  color: dimgrey;
 }
 
 
@@ -217,7 +221,8 @@ i {
 
 #detail {
   flex: 1;
-  padding: 2rem 4rem;
+  padding: 2rem 2rem;
+  padding-left: 0;
   width: 100%;
 }
 
@@ -485,4 +490,17 @@ div.desc {
   display: inline-block;
   align-self: flex-end;
   text-align: left;
+}
+
+.article {
+  margin-bottom: 4rem;
+}
+
+.article a{
+  color: grey;
+
+}
+
+.article a:hover {
+  color: black;
 }
