--- a/src/index.css
+++ b/src/index.css
@@ -535,6 +535,7 @@ div.desc {
 }
 
 .projects li {
+  min-width: 5rem;
   margin-top: 1rem;
   padding: .5rem;
   list-style-type: none;
@@ -544,6 +545,7 @@ div.desc {
 }
 
 .projects li:hover{
+
   background-color: #FFD8ED;
 
   transform: translateY(-5px);
@@ -563,6 +565,7 @@ div.desc {
 }
 
 .projects ul{
+
   margin: 0;
   padding: 0;
 }
