--- a/src/index.css
+++ b/src/index.css
@@ -610,3 +610,36 @@ div.desc {
   height: 300px;
 }
 
+.tools{
+margin-left: 2rem;
+}
+
+.tools li{
+  margin: initial;
+
+  transition: initial;
+  border-radius: initial;
+  background-color: initial;
+  list-style-type: initial;
+}
+
+.tools li:hover{
+  background-color: initial;
+
+  transform: initial;
+}
+.tools ul{
+  margin-left: 1rem;
+}
+
+.cover-img img{
+  width:800px;
+  height: 400px;
+  object-fit: cover;
+}
+
+.code-img img{
+  width:100%;
+  height: 800px;
+  object-fit: scale-down;
+}
