--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:regular,bold,italic&subset=latin,latin-ext');
+@import url('https://fonts.googleapis.com/css2?family=Spectral&display=swap');
+
 
 @font-face {
   font-family: 'MoreSugar';
