--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Spectral&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spectral:wght@300;400&display=swap');
 
 
-@font-face {
-  font-family: 'MoreSugar';
-  src: local("MoreSugar-Regular"), url("./routes/fonts/MoreSugar-Regular.ttf") format("truetype");
-}
+/*@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');*/
 
-@font-face {
-  font-family: 'MoreSugarThin';
-  src: local("MoreSugar-Thin"), url("./routes/fonts/MoreSugar-Thin.ttf") format("truetype");
-}
+@import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap');
+
+
 
 
 html {
@@ -75,9 +71,13 @@ button:active {
 .pfp{
   margin-top: 1rem;
   object-fit: contain;
-  border-radius: 10%;
   width: 100%;
   max-width: 12rem;
+  border-radius: 2px;
+  border: solid white 8px;
+  border-bottom: solid white 16px;
+  filter: drop-shadow(0 0 .25rem black);
+
 }
 
 #contact h1 {
@@ -149,8 +149,9 @@ form[action$="destroy"] button {
   display: flex;
   align-items: center;
   margin-bottom: 0;
-  color: darkred;
-  font-family: Spectral, serif;
+  color: #000000;
+  font-family: Love Ya Like A Sister, cursive;
+
 
 }
 
@@ -187,7 +188,7 @@ i {
 }
 
 #sidebar ul {
-  font-family: "MoreSugar", sans-serif;
+  font-family: Love Ya Like A Sister, cursive;
   text-transform: lowercase;
   font-size:26px;
   padding: 0;
@@ -494,7 +495,7 @@ div.desc {
   left: 0;
   right: 0;
   padding: 1.5rem;
-  font-family: "MoreSugarThin", sans-serif;
+  font-family: Love Ya Like A Sister, cursive;
   display: flex;
   height: 100%;
   width: 100%;
@@ -531,13 +532,16 @@ div.desc {
 }
 
 #art h1{
-  font-size: 70px;
-  font-family: "MoreSugar", sans-serif;
+  font-size: 100px;
+  font-family:  Love Ya Like A Sister, cursive;
+  color: black;
+  margin-bottom: 0;
+  /*-webkit-text-stroke: 1px black;*/
 }
 
 #art h2{
-  background-color: #FFD8ED;
-  font-family: "MoreSugarThin", sans-serif;
+  background-color: #fff2d2;
+  font-family:  Love Ya Like A Sister, cursive;
 }
 
 #art h3{
@@ -577,19 +581,22 @@ div.desc {
 
 .projects li {
 
-
+  font-family: Spectral;
+  font-size: 20px;
   margin-top: 1rem;
   text-align: center;
   padding: .5rem;
   list-style-type: none;
   transition: 0.3s;
-  border-radius: 8px;
+  border-radius: 2px;
+
   background-color: rgba(255, 216, 237, 0.47);
 }
 
 .projects li:hover{
 
   background-color: #FFD8ED;
+  filter: drop-shadow(10px 10px 4px rgba(116, 78, 78, 0.71));
 
   transform: translateY(-5px);
 }
@@ -617,7 +624,7 @@ div.desc {
   height: 100%;
   padding: 0;
   font-size: 16px;
-  font-family: "MoreSugarThin", sans-serif;
+  font-family:  Love Ya Like A Sister, cursive;
 
 }
 
@@ -635,7 +642,7 @@ margin-right: 8rem;
   /*font-style: italic;*/
   padding-left: 2rem;
   margin-bottom: 1rem;
-  font-family: "MoreSugar", sans-serif;
+  font-family:  Love Ya Like A Sister, cursive;
 }
 
 .content-panel h4{
@@ -644,12 +651,12 @@ margin-right: 8rem;
   padding-left: 2rem;
   color: #818181;
   margin-bottom: 3rem;
-  font-family: 'MoreSugarThin', sans-serif;
+  font-family:  Love Ya Like A Sister, cursive;
 }
 
 .content-panel h3{
   font-size: 30px;
-  font-family: 'MoreSugarThin', sans-serif;
+  font-family:  Love Ya Like A Sister, cursive;
 
 }
 
@@ -734,18 +741,18 @@ margin-left: 2rem;
 }
 
 #other h1{
-  font-family: 'MoreSugar', sans-serif;
+  font-family:  Love Ya Like A Sister, cursive;
   font-size: 40px;
 }
 
 #other h2{
-  font-family: 'MoreSugar', sans-serif;
+  font-family:  Love Ya Like A Sister, cursive;
   margin: 1rem;
   background-color:#FFEFBC;
 }
 
 #other h3{
-  font-family: 'MoreSugarThin', sans-serif;
+  font-family:  Love Ya Like A Sister, cursive;
 }
 
 #other p{
