--- a/src/index.css
+++ b/src/index.css
@@ -720,6 +720,12 @@ margin-left: 2rem;
   object-fit: cover;
 }
 
+.blueprint-img img{
+  width:900px;
+  height: 300px;
+  object-fit: contain;
+}
+
 .code-img img{
   width:100%;
   height: 800px;
