--- a/src/index.css
+++ b/src/index.css
@@ -674,10 +674,13 @@ margin-right: 8rem;
 }
 
 .content-panel h5{
-  font-family: "Spectral ExtraLight", serif;
-  font-size: 16px;
+  font-family: "Spectral", serif;
+  font-size: 18px;
   margin: 0;
   text-align: right;
+  font-weight: normal;
+  font-style: italic;
+
 
   color: #7d7d7d;
 
