--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap');
 
+@import url("https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Patrick+Hand&display=swap" );
+
 
 
 
@@ -95,45 +97,6 @@ button:active {
 
 }
 
-#contact h1 {
-  display: flex;
-  align-items: flex-start;
-  gap: 1rem;
-}
-#contact h1 form {
-  display: flex;
-  align-items: center;
-  margin-top: 0.25rem;
-}
-#contact h1 form button {
-  box-shadow: none;
-  font-size: 1.5rem;
-  font-weight: 400;
-  padding: 0;
-}
-#contact h1 form button[value="true"] {
-  color: #a4a4a4;
-}
-#contact h1 form button[value="true"]:hover,
-#contact h1 form button[value="false"] {
-  color: #eeb004;
-}
-
-form[action$="destroy"] button {
-  color: #f44250;
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
 
 #root {
   display: flex;
@@ -141,83 +104,6 @@ form[action$="destroy"] button {
   width: 100%;
 }
 
-#sidebar {
-
-  width: 100%;
-  height: 100%;
-  background-color: #f7f7f7;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: Spectral, serif;
-
-
-}
-
-
-#sidebar > * {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-#sidebar h1 {
-  display: flex;
-  align-items: center;
-  margin-bottom: 0;
-  color: #000000;
-  font-family: Love Ya Like A Sister, cursive;
-
-
-}
-
-
-
-#sidebar > div {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid #e3e3e3;
-}
-
-#sidebar nav {
-  flex: 1;
-  overflow: auto;
-  padding-top: 1rem;
-}
-
-#sidebar nav a span {
-  float: right;
-  color: #eeb004;
-}
-#sidebar nav a.active span {
-  color: inherit;
-}
-
-i {
-  color: #818181;
-}
-#sidebar nav .active i {
-  color: inherit;
-}
-
-#sidebar ul {
-  font-family: Love Ya Like A Sister, cursive;
-  text-transform: lowercase;
-  font-size:26px;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-
-}
-
-#sidebar p{
-  margin-top: .5rem;
-  margin-bottom: 2rem;
-  opacity: 75%;
-  font-family: Spectral, serif;
-}
 
 #link{
   font-family: Spectral, serif;
@@ -525,7 +411,7 @@ div.desc {
   left: 0;
   right: 0;
   padding: 1.5rem;
-  font-family: Love Ya Like A Sister, cursive;
+  font-family: Spectral, serif;
   display: flex;
   height: 100%;
   width: 100%;
@@ -541,7 +427,6 @@ div.desc {
 .text {
   color: white;
   font-size: 18px;
-
   position: absolute;
   display: inline-block;
   align-self: flex-end;
@@ -563,7 +448,8 @@ div.desc {
 
 #art h1{
   font-size: 100px;
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Patrick Hand, cursive;
+  line-height: 1;
   color: black;
   margin-bottom: 0;
   /*-webkit-text-stroke: 1px black;*/
@@ -571,12 +457,14 @@ div.desc {
 
 #art h2{
   background-color: #fff2d2;
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Patrick Hand, cursive;
 }
 
 #art h3{
   /*font-size: 20px;*/
   margin:0;
+  font-family:  Patrick Hand, cursive;
+  font-size: 32px;
 }
 
 #art p{
@@ -653,7 +541,7 @@ div.desc {
   height: 100%;
   padding: 0;
   font-size: 16px;
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Spectral, serif;
 
 }
 
@@ -671,7 +559,7 @@ margin-right: 8rem;
   /*font-style: italic;*/
   padding-left: 2rem;
   margin-bottom: 1rem;
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Spectral, serif;
 }
 
 .content-panel h4{
@@ -680,12 +568,12 @@ margin-right: 8rem;
   padding-left: 2rem;
   color: #818181;
   margin-bottom: 3rem;
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Spectral, serif;
 }
 
 .content-panel h3{
   font-size: 30px;
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Spectral, serif;
 
 }
 
@@ -779,18 +667,18 @@ margin-left: 2rem;
 }
 
 #other h1{
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Spectral, serif;
   font-size: 40px;
 }
 
 #other h2{
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Spectral, serif;
   margin: 1rem;
   background-color:#FFEFBC;
 }
 
 #other h3{
-  font-family:  Love Ya Like A Sister, cursive;
+  font-family:  Spectral, serif;
 }
 
 #other p{
