--- a/src/index.css
+++ b/src/index.css
@@ -510,12 +510,51 @@ div.desc {
   background-color: rgba(255, 216, 237, 0.47);
 }
 
-.projects li:hover{
+.project-link{
+  font-family: Spectral, serif;
+  font-size: 20px;
+  text-align: center;
+  padding: .5rem;
+  list-style-type: none;
+  transition: 0.3s;
+  border-radius: 2px;
 
+
+
+  background-color: rgba(255, 216, 237, 0.47);
+
+}
+
+.project-link:hover{
   background-color: #FFD8ED;
   filter: drop-shadow(10px 10px 4px rgba(116, 78, 78, 0.71));
 
   transform: translateY(-5px);
+}
+
+
+
+@media screen and (max-width: 1180px) {
+  .project-header{
+    display: inline;
+    justify-content: center;
+
+  }
+  .project-desc{
+    margin-left: 0;
+    margin-top: 1rem;
+  }
+}
+
+@media screen and (min-width: 1180px) {
+  .project-header{
+    display: flex;
+  }
+  .project-desc{
+    margin-left: 5rem;
+    align-self: center;
+  }
+
 }
 
 .projects a{
@@ -635,9 +674,10 @@ margin-left: 2rem;
 }
 
 .cover-img img{
-  width:800px;
-  height: 400px;
+  width: 100%;
+  height: auto;
   object-fit: cover;
+  border-radius: 6px;
 }
 
 .blueprint-img img{
@@ -688,22 +728,7 @@ margin-left: 2rem;
 
 
 
-@media screen and (max-width: 1180px) {
-  .code-responsive{
-    display: inline;
-    justify-content: center;
 
-  }
-}
-
-@media screen and (min-width: 1180px) {
-  .code-responsive{
-    display: flex;
-    justify-content: left;
-
-  }
-
-}
 
 code{
   background-color: #e7e7e7;
